web: Fix overflow, better dungeon reward location style in light mode

--- a/assets/web/static/common.css
+++ b/assets/web/static/common.css
@@ -2,7 +2,7 @@ html,
 body {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: 100%;
     justify-content: center;
     align-items: center;
     font-family: 'DejaVu Sans', sans-serif;
@@ -154,6 +154,14 @@ footer {
 
     .items img {
         filter: drop-shadow(1px 1px 0 black);
+    }
+
+    .items .loc {
+        filter: invert(1);
+    }
+
+    .items .mq {
+        filter: brightness(50%) sepia(100) saturate(100);
     }
 
     .count {
